apps/torrent/radarr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
spec:
  ports:
    - name: http
      port: 7878
      protocol: TCP
      targetPort: http
  selector:
    app: radarr
  type: ClusterIP
