apps/torrent/radarr/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.sarapuce.fr/oauth2/start?rd=https://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.nginx.svc.cluster.local/oauth2/auth
  name: radarr-web
spec:
  ingressClassName: public
  rules:
  - host: radarr.sarapuce.fr
    http:
      paths:
      - backend:
          service:
            name: radarr-service
            port:
              number: 7878
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - radarr.sarapuce.fr
    secretName: tls-secret
